force-app/main/default/objects/Hippo_Event__c/fields/Is_Anti_Corruption_Policy_Details__c.field-meta.xml
<CustomField>
    <fullName>Is_Anti_Corruption_Policy_Details__c</fullName>
    <description>Has the third party organization (if an Event Sponsorship) or Third Party Provider (if used for a Company-organized Event) been assessed for potential conflict of interest, in accordance with Viatris&apos;s Anti-Corruption Policy? If not, provide an explanation or consult with local Compliance for guidance prior to submitting this Summary.</description>
    <inlineHelpText>Has the third party organization or Third Party Provider been assessed for potential conflict of interest, in accordance with Viatris&apos;s Anti-Corruption Policy? If not, provide an explanation to submitting this Summary.</inlineHelpText>
    <label>Is Anti-Corruption Policy Details</label>
    <type>TextArea</type>
</CustomField>