force-app/main/default/objects/Hippo_Event__c/fields/is_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>is_Approval_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Approval Completed</label>
    <type>Checkbox</type>
</CustomField>