force-app/main/default/objects/Hippo_Event__c/fields/Is_conducive_to_exchange__c.field-meta.xml
<CustomField>
    <fullName>Is_conducive_to_exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will the proposed event be conducted in a clinical, educational, or other setting (including hotel or other commercially available meeting facilities) conducive to the effective exchange of information?</description>
    <inlineHelpText>7. Will the proposed event be conducted in a clinical, educational, or other setting (including hotel or other commercially available meeting facilities) &lt;b&gt;conducive to the effective exchange of information?&lt;/b&gt;</inlineHelpText>
    <label>Is conducive to exchange</label>
    <type>Checkbox</type>
</CustomField>