force-app/main/default/objects/Hippo_Event__c/fields/Is_continuing_medical_education__c.field-meta.xml
<CustomField>
    <fullName>Is_continuing_medical_education__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is accreditation for continuing medical education to be offered as part of the event?</description>
    <inlineHelpText>Is accreditation for continuing medical education to be offered as part of the event?</inlineHelpText>
    <label>Is continuing medical education</label>
    <type>Checkbox</type>
</CustomField>