force-app/main/default/objects/Hippo_Event__c/fields/Is_Extended_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Extended_Event__c</fullName>
    <formula>(End_Event_Date__c - Start_Event_Date__c) &gt; 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Extended Event</label>
    <type>Checkbox</type>
</CustomField>