force-app/main/default/objects/Hippo_Event__c/fields/Is_Global_Policy_on_Engaging__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Policy_on_Engaging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Global Policy on Engaging HCPs as Consultants, Advisory Board Members and External Speakers has been followed, if the proposed event involves the engagement of an HCP(s) (e.g., as a speaker)?</description>
    <inlineHelpText>The Global Policy on Engaging HCPs as Consultants, Advisory Board Members and External Speakers has been followed, if the proposed event involves the engagement of an HCP(s) (e.g., as a speaker)?</inlineHelpText>
    <label>Is Global Policy on Engaging OLD</label>
    <type>Checkbox</type>
</CustomField>