force-app/main/default/objects/Hippo_Event__c/fields/Is_Global_Policy_on_Engaging_PK__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Policy_on_Engaging_PK__c</fullName>
    <description>The Global Policy on Engaging HCPs as Consultants, Advisory Board Members and External Speakers has been followed, if the proposed event involves the engagement of an HCP(s) (e.g., as a speaker)?</description>
    <inlineHelpText>8. The &lt;b&gt;Global Policy on Engaging HCPs as Consultants, Advisory Board Members and External Speakers&lt;/b&gt; has been followed, if the proposed event involves the engagement of an HCP(s) (e.g., as a speaker)?</inlineHelpText>
    <label>Is Global Policy on Engaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>