force-app/main/default/objects/Hippo_Event__c/fields/Is_International__c.field-meta.xml
<CustomField>
    <fullName>Is_International__c</fullName>
    <formula>Parent_User_Setting__r.Is_International_Requester__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is International</label>
    <type>Checkbox</type>
</CustomField>