force-app/main/default/objects/Hippo_Event__c/fields/Is_late_request__c.field-meta.xml
<CustomField>
    <fullName>Is_late_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is late request</label>
    <type>Checkbox</type>
</CustomField>