force-app/main/default/objects/Hippo_Event__c/fields/Is_Local_Regulatory_Authority_PK__c.field-meta.xml
<CustomField>
    <fullName>Is_Local_Regulatory_Authority_PK__c</fullName>
    <description>Have the applicable local &lt;b&gt;regulatory authority&lt;/b&gt; requirements been met (e.g., approval from bodies governing the medical profession)? Please see Addendum F attached for a non-exclusive list of such local regulatory authorities.
&lt;b&gt;If uncertain, the answer is NO.&lt;/b&gt;</description>
    <inlineHelpText>1. Have the applicable local &lt;b&gt;regulatory authority&lt;/b&gt; requirements been met (e.g., approval from bodies governing the medical profession)? Please see Addendum F attached for a non-exclusive list of such local regulatory authorities.</inlineHelpText>
    <label>Is Local Regulatory Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>