force-app/main/default/objects/Hippo_Event__c/fields/Is_Mylan_HCP_Educational_Support__c.field-meta.xml
<CustomField>
    <fullName>Is_Mylan_HCP_Educational_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the HCP to be provided with Educational Support by Viatris a government official (per Viatris&apos;s Anti-Corruption Policy)? If yes, provide a description of why he/she is considered a government official.</description>
    <inlineHelpText>Is the HCP to be provided with Educational Support by Viatris a government official (per &lt;i&gt;Viatris&apos;s Anti-Corruption Policy&lt;/i&gt;)? If yes, provide a description of why he/she is considered a government official.</inlineHelpText>
    <label>Is Viatris HCP Educational Support</label>
    <type>Checkbox</type>
</CustomField>