force-app/main/default/objects/Hippo_Event__c/fields/Is_Mylan_HCP_Educational_Support_Details__c.field-meta.xml
<CustomField>
    <fullName>Is_Mylan_HCP_Educational_Support_Details__c</fullName>
    <description>Is the HCP to be provided with Educational Support by Viatris a government official (per Viatris&apos;s Anti-Corruption Policy)? If yes, provide a description of why he/she is considered a government official.</description>
    <inlineHelpText>Is the HCP to be provided with Educational Support by Viatris a government official (per Viatris&apos;s Anti-Corruption Policy)? If yes, provide a description of why he/she is considered a government official.</inlineHelpText>
    <label>Is Mylan HCP Educational Support Details</label>
    <type>TextArea</type>
</CustomField>