force-app/main/default/objects/Hippo_Event__c/fields/Is_Mylan_the_only_sponsor_of_the_event__c.field-meta.xml
<CustomField>
    <fullName>Is_Mylan_the_only_sponsor_of_the_event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Viatris the only sponsor of the event?</inlineHelpText>
    <label>Is Mylan the only sponsor of the event?</label>
    <type>Checkbox</type>
</CustomField>