force-app/main/default/objects/Hippo_Event__c/fields/Is_no_intention_for_event__c.field-meta.xml
<CustomField>
    <fullName>Is_no_intention_for_event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There is no intention for proposed event to result in a consensus statement, paper, or publication? (Mark “No” if event may result in a consensus statement, paper, or publication)</description>
    <inlineHelpText>6. There is no intention for proposed event to result in a consensus statement, paper, or publication? (Mark “No” if event may result in a consensus statement, paper, or publication)</inlineHelpText>
    <label>Is no intention for event</label>
    <type>Checkbox</type>
</CustomField>