force-app/main/default/objects/Hippo_Event__c/fields/Is_Post_Factum_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Post_Factum_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Post Factum Request</label>
    <type>Checkbox</type>
</CustomField>