force-app/main/default/objects/Hippo_Event__c/fields/Is_Service_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Service (dummy) event</description>
    <label>Is Service Event</label>
    <type>Checkbox</type>
</CustomField>