force-app/main/default/objects/Hippo_Event__c/fields/Is_Site_Visit_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_Site_Visit_Event_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Site Visit Event Type</label>
    <type>Checkbox</type>
</CustomField>