force-app/main/default/objects/Hippo_Event__c/fields/Is_the_document_already_signed__c.field-meta.xml
<CustomField>
    <fullName>Is_the_document_already_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract is already signed</label>
    <type>Checkbox</type>
</CustomField>