force-app/main/default/objects/Hippo_Event__c/fields/Is_the_proposed_event_types_PK__c.field-meta.xml
<CustomField>
    <fullName>Is_the_proposed_event_types_PK__c</fullName>
    <description>Is the proposed event one of the following types (Masterclass, Roundtable, Symposium or Site Visit)?</description>
    <inlineHelpText>5. Is the proposed event one of the following types &lt;b&gt;(Masterclass, Roundtable, Symposium or Site Visit)&lt;/b&gt;?</inlineHelpText>
    <label>Is the proposed event types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>