force-app/main/default/objects/Hippo_Event__c/fields/Is_therapeutic_content_in_cur_practice__c.field-meta.xml
<CustomField>
    <fullName>Is_therapeutic_content_in_cur_practice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the content of the proposed event in therapeutic area(s) in which the participating HCP(s) currently practice?</description>
    <inlineHelpText>4. Is the content of the proposed event in &lt;b&gt;therapeutic area(s)&lt;/b&gt; in which the &lt;b&gt;participating HCP(s) currently practice&lt;/b&gt;?</inlineHelpText>
    <label>Is therapeutic content in cur practice</label>
    <type>Checkbox</type>
</CustomField>