force-app/main/default/objects/Hippo_Event__c/fields/IsInMarketingPlan__c.field-meta.xml
<CustomField>
    <fullName>IsInMarketingPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Event in the marketing plan?</description>
    <inlineHelpText>Is the Event in the marketing plan?</inlineHelpText>
    <label>Is in Marketing Plan</label>
    <type>Checkbox</type>
</CustomField>