force-app/main/default/objects/Hippo_Event__c/fields/isRelatedToDrug__c.field-meta.xml
<CustomField>
    <fullName>isRelatedToDrug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this event related to Drug?</description>
    <inlineHelpText>Is this event related to Drug?</inlineHelpText>
    <label>Is this event related to Drug?</label>
    <type>Checkbox</type>
</CustomField>