force-app/main/default/objects/Hippo_Event__c/fields/isRelatedToDrugDetails__c.field-meta.xml
<CustomField>
    <fullName>isRelatedToDrugDetails__c</fullName>
    <description>Please specify the name of the drug.</description>
    <inlineHelpText>Please specify the name of the drug.</inlineHelpText>
    <label>Please specify the name of the drug.</label>
    <type>TextArea</type>
</CustomField>