force-app/main/default/objects/Hippo_Event__c/fields/IsSyncDone__c.field-meta.xml
<CustomField>
    <fullName>IsSyncDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSyncDone</label>
    <type>Checkbox</type>
</CustomField>