force-app/main/default/objects/Hippo_Event__c/fields/isWillCloneAfterCancel__c.field-meta.xml
<CustomField>
    <fullName>isWillCloneAfterCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that determines the Cloning with History process will follow after the cancellation of the Event</description>
    <label>is Will Clone After Cancel</label>
    <type>Checkbox</type>
</CustomField>