force-app/main/default/objects/Hippo_Event__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>IF(Parent_User_Setting__r.Country__r.Name = &quot;Brand Equity&quot;, &quot;en&quot;,
IF(Parent_User_Setting__r.Country__r.Name = &quot;OTC&quot;, &quot;en&quot;,
IF(Parent_User_Setting__r.Country__r.Name = &quot;Biosimilars&quot;, &quot;en&quot;,
IF(Country_name__c = &quot;Italy&quot; , &quot;it&quot;,
IF(Country_name__c = &quot;Spain&quot; , &quot;es&quot;,
IF(Country_name__c = &quot;Poland&quot; , &quot;pl&quot;,
IF(Country_name__c = &quot;Portugal&quot; , &quot;pt&quot;,
IF(Country_name__c = &quot;Germany&quot;, &quot;de&quot;,
IF(Country_name__c = &quot;Switzerland&quot;, &quot;de&quot;,
IF(Country_name__c = &quot;Slovakia&quot;, &quot;sk&quot;,
IF(Country_name__c = &quot;Slovenia&quot;, &quot;sl&quot;,
IF(Country_name__c = &quot;Austria&quot;, &quot;de&quot;,
IF(Country_name__c = &quot;Serbia&quot;, &quot;sr&quot;,
IF(Country_name__c = &quot;Croatia&quot;, &quot;hr&quot;,
IF(Country_name__c = &quot;France&quot;, &quot;fr&quot;,&quot;en&quot;
)))))))))))))))</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>