force-app/main/default/objects/Hippo_Event__c/fields/Legal_Entity_Info__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Legal Entity Information</inlineHelpText>
    <label>Legal Entity Info</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>