force-app/main/default/objects/Hippo_Event__c/fields/Local_Regulatory_Authority__c.field-meta.xml
<CustomField>
    <fullName>Local_Regulatory_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Local Regulatory Authority?</description>
    <inlineHelpText>Is Local Regulatory Authority?</inlineHelpText>
    <label>Is Local Regulatory Authority OLD</label>
    <type>Checkbox</type>
</CustomField>