force-app/main/default/objects/Hippo_Event__c/fields/Local_Regulatory_Authority_Details__c.field-meta.xml
<CustomField>
    <fullName>Local_Regulatory_Authority_Details__c</fullName>
    <description>Have the applicable local regulatory authority requirements been met (e.g., approval from bodies governing the medical profession)? Please see Addendum F attached for a non-exclusive list of such local regulatory authorities.</description>
    <inlineHelpText>Have the applicable local regulatory authority requirements been met (e.g., approval from bodies governing the medical profession)? Please see Addendum F attached for a non-exclusive list of such local regulatory authorities.</inlineHelpText>
    <label>Local Regulatory Authority Details</label>
    <type>TextArea</type>
</CustomField>