force-app/main/default/objects/Hippo_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location and/or Venue Details. 
For HCP Educational Support, include the city and country of the HCP&apos;s practice as well as the city and country where the educational event will take place.
For Event Sponsorship or a Company-organized Event, include details describing the event venue (with supporting documentation demonstrating that the event will be held at a venue that is appropriate and conducive to the main purpose of the meeting, the city and country where it is located, et cetera).</description>
    <inlineHelpText>Location and/or Venue Details.</inlineHelpText>
    <label>Location details</label>
    <type>TextArea</type>
</CustomField>