force-app/main/default/objects/Hippo_Event__c/fields/MissedApproversMessage__c.field-meta.xml
<CustomField>
    <fullName>MissedApproversMessage__c</fullName>
    <description>This field is used to display a message on the Event which Approvers are missing in case the Event creates a test User</description>
    <label>Missed Approvers Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>