force-app/main/default/objects/Hippo_Event__c/fields/Multiple_FLM__c.field-meta.xml
<CustomField>
    <fullName>Multiple_FLM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chosen Multiple FLM record.</description>
    <inlineHelpText>Chosen Multiple FLM record.</inlineHelpText>
    <label>Multiple FLM</label>
    <referenceTo>Hippo_Multiple_FLM__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>