force-app/main/default/objects/Hippo_Event__c/fields/Number_Of_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Interactions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>