force-app/main/default/objects/Hippo_Event__c/fields/Organizer_Address__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Address__c</fullName>
    <description>Organizer Address</description>
    <inlineHelpText>Organizer Address</inlineHelpText>
    <label>Organizer Address</label>
    <type>TextArea</type>
</CustomField>