force-app/main/default/objects/Hippo_Event__c/fields/Organizer_Company_number__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Company_number__c</fullName>
    <description>Organizer Company number</description>
    <inlineHelpText>Organizer Company number</inlineHelpText>
    <label>Organizer Company number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>