force-app/main/default/objects/Hippo_Event__c/fields/Organizer_name__c.field-meta.xml
<CustomField>
    <fullName>Organizer_name__c</fullName>
    <label>Organizer name</label>
    <type>TextArea</type>
</CustomField>