force-app/main/default/objects/Hippo_Event__c/fields/Origin_country_of_request__c.field-meta.xml
<CustomField>
    <fullName>Origin_country_of_request__c</fullName>
    <label>Origin country of request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>