force-app/main/default/objects/Hippo_Event__c/fields/Original_Event__c.field-meta.xml
<CustomField>
    <fullName>Original_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Event</label>
    <referenceTo>Hippo_Event__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>