force-app/main/default/objects/Hippo_Event__c/fields/Original_Sync_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Sync_ID__c</fullName>
    <externalId>true</externalId>
    <label>Original Sync ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>