force-app/main/default/objects/Hippo_Event__c/fields/Other_Event_Type_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Event_Type_Explanation__c</fullName>
    <label>Other Event Type Explanation</label>
    <type>TextArea</type>
</CustomField>