force-app/main/default/objects/Hippo_Event__c/fields/Parent_User_Setting__c.field-meta.xml
<CustomField>
    <fullName>Parent_User_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent User Setting</label>
    <referenceTo>Hippo_User_Settings__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Parent_Of_Events</relationshipName>
    <type>Lookup</type>
</CustomField>