force-app/main/default/objects/Hippo_Event__c/fields/Post_factum_event_reason__c.field-meta.xml
<CustomField>
    <fullName>Post_factum_event_reason__c</fullName>
    <label>Post factum event reason</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>