force-app/main/default/objects/Hippo_Event__c/fields/Purpose_details__c.field-meta.xml
<CustomField>
    <fullName>Purpose_details__c</fullName>
    <description>Describe the scientific/educational purpose of the event:</description>
    <inlineHelpText>Describe the scientific/educational purpose of the event:</inlineHelpText>
    <label>Purpose details</label>
    <type>TextArea</type>
</CustomField>