force-app/main/default/objects/Hippo_Event__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Hippo_Region__c</referenceTo>
    <relationshipName>Hippo_Events</relationshipName>
    <type>Lookup</type>
</CustomField>