force-app/main/default/objects/Hippo_Event__c/fields/Region_Event__c.field-meta.xml
<CustomField>
    <fullName>Region_Event__c</fullName>
    <formula>Parent_User_Setting__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region_Event</label>
    <type>Text</type>
</CustomField>