force-app/main/default/objects/Hippo_Event__c/fields/Region_Sync__c.field-meta.xml
<CustomField>
    <fullName>Region_Sync__c</fullName>
    <label>Region Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>