force-app/main/default/objects/Hippo_Event__c/fields/Replace_HCP_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Replace_HCP_Reference_Number__c</fullName>
    <description>If this Summary is for an HCP to replace another HCP who can no longer attend, identify the initial Company contract management system (e.g., ContractPod). Reference #:</description>
    <inlineHelpText>If this Summary is for an HCP to replace another HCP who can no longer attend, identify the initial Company contract management system (e.g., ContractPod). Reference #:</inlineHelpText>
    <label>Replace HCP Reference #</label>
    <type>TextArea</type>
</CustomField>