force-app/main/default/objects/Hippo_Event__c/fields/Request_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Cancellation_Reason__c</fullName>
    <description>https://jira.viseven.com/browse/MOBILE-25413</description>
    <label>Request Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Request_Cancellation_Reason</valueSetName>
    </valueSet>
</CustomField>