force-app/main/default/objects/Hippo_Event__c/fields/Request_Cancellation_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Cancellation_Reason_Details__c</fullName>
    <description>https://jira.viseven.com/browse/MOBILE-25413</description>
    <label>Request Cancellation Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>