force-app/main/default/objects/Hippo_Event__c/fields/Requesting_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Party_Email__c</fullName>
    <formula>Requesting_Party_Email_Sync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Party Email</label>
    <type>Text</type>
</CustomField>