force-app/main/default/objects/Hippo_Event__c/fields/Requesting_Party_Name_Sync__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Party_Name_Sync__c</fullName>
    <label>Requesting Party Name Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>