force-app/main/default/objects/Hippo_Event__c/fields/Requestor_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>Requestor_TimeZone__c</fullName>
    <description>We use this field for batch VS_ChangeProcessToPostFactumBatch for Postfactum change request</description>
    <inlineHelpText>Contains Requestor TimeZone from the moment from creation of the record</inlineHelpText>
    <label>Requestor TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>