force-app/main/default/objects/Hippo_Event__c/fields/Responsible_FLM__c.field-meta.xml
<CustomField>
    <fullName>Responsible_FLM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chosen FLM if there are many FLM allowed.</description>
    <inlineHelpText>Chosen FLM if there are many FLM allowed.</inlineHelpText>
    <label>Responsible FLM</label>
    <referenceTo>Hippo_User_Settings__c</referenceTo>
    <relationshipLabel>Events (Responsible FLM)</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>